# xinput-device

./: Cargo.toml  README.md
.github/workflows/: build_and_test.yml  check_examples.yml  clippy.yml  rustfmt.yml
examples/nrf52840-xinput-device/: Cargo.toml  memory.x
examples/nrf52840-xinput-device/.cargo/: config.toml
examples/nrf52840-xinput-device/src/: main.rs
examples/rp2040-xinput-device/: Cargo.toml
examples/rp2040-xinput-device/src/: main.rs
examples/stm32f411-xinput-device/: Cargo.toml  memory.x
examples/stm32f411-xinput-device/.cargo/: config.toml
examples/stm32f411-xinput-device/.cursor/: rules
examples/stm32f411-xinput-device/src/: main.rs
src/: controller.rs  lib.rs  xinput.rs
xinput-device/: Cargo.toml
xinput-device/src/: xinput.rs
