[package]
name = "xinput-device"
version = "0.1.0"
authors = ["Timo Kröger <timokroeger93@gmail.com>", "9names"]
edition = "2021"
license = "MIT/Apache-2.0"

[features]
defmt = ["dep:defmt"]

[dependencies]
defmt = { version = "0.3.6", optional = true }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-time = { version = "0.3.0", features = ["defmt", "generic-queue-8"] }
embassy-usb = { version = "0.1.0", features = [
    "defmt",
    "max-interface-count-8",
] }
